# pigstick

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
lm/: base_lm.py  base_model.py  test.py
pigstick/eval/: evaluateModel.py  evaluationDataset.csv
pigstick/lm/: test.py
pigstick/reward/: __init__.py  lint_filter.py  llama_reward.py  reward_function.py
pigstick/sft/: config.py  data.ipynb  dataloader.py  full_lit.py  iv_sft_refs.md  model.py  todo.md  tokenizer.py  train.py
pigstick/sft/.old/: todo.md
pigstick/verifiers/: flake8_linter.py
